Fix sidebar white space and make sticky

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,12 @@ body {
 
 @media (min-width: 768px) {
     #sidebar {
-        min-height: 100vh;
+        position: sticky;
+        top: 0;
+        height: 100vh;
+    }
+    #sidebar .position-sticky {
+        top: 0;
     }
 }
 
